Using Movie's Plot

--- a/Movies Recommendation/movies_recommendation.ipynb
+++ b/Movies Recommendation/movies_recommendation.ipynb
@@ -6,7 +6,7 @@
       "name": "movies_recommendation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOI4Ys8gxd22WTL5YZmfVFo",
+      "authorship_tag": "ABX9TyN2VCSwxnTRFK/N4cUBMBsU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 71
         },
-        "outputId": "931b79b4-3032-4b56-ba46-dc390102289a"
+        "outputId": "668600f0-376d-4996-fda0-3ed548694364"
       },
       "source": [
         "# Essentials\n",
@@ -106,7 +106,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "18b0d6f5-1a58-4e75-f7fb-154169c03e6b"
+        "outputId": "09265465-7803-4989-8512-443b57863304"
       },
       "source": [
         "nltk.download('punkt')"
@@ -117,7 +117,7 @@
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n"
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
           ],
           "name": "stdout"
         },
@@ -154,7 +154,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "99fc9fbf-6fdd-489f-eaaf-c73f1f5af2ee"
+        "outputId": "c05ada45-554e-4bc6-f6b3-d55dc966d656"
       },
       "source": [
         "!wget https://assets.datacamp.com/production/repositories/4375/datasets/83f27c4ad045c098d3db5596154316e4ee0a28a8/movie_overviews.csv"
@@ -164,16 +164,16 @@
         {
           "output_type": "stream",
           "text": [
-            "--2020-06-30 19:15:19--  https://assets.datacamp.com/production/repositories/4375/datasets/83f27c4ad045c098d3db5596154316e4ee0a28a8/movie_overviews.csv\n",
-            "Resolving assets.datacamp.com (assets.datacamp.com)... 13.226.45.82, 13.226.45.81, 13.226.45.22, ...\n",
-            "Connecting to assets.datacamp.com (assets.datacamp.com)|13.226.45.82|:443... connected.\n",
+            "--2020-07-15 16:56:46--  https://assets.datacamp.com/production/repositories/4375/datasets/83f27c4ad045c098d3db5596154316e4ee0a28a8/movie_overviews.csv\n",
+            "Resolving assets.datacamp.com (assets.datacamp.com)... 13.226.45.22, 13.226.45.82, 13.226.45.40, ...\n",
+            "Connecting to assets.datacamp.com (assets.datacamp.com)|13.226.45.22|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 3384348 (3.2M) [text/csv]\n",
-            "Saving to: ‘movie_overviews.csv.3’\n",
+            "Saving to: ‘movie_overviews.csv’\n",
             "\n",
-            "\rmovie_overviews.csv   0%[                    ]       0  --.-KB/s               \rmovie_overviews.csv 100%[===================>]   3.23M  17.1MB/s    in 0.2s    \n",
+            "\rmovie_overviews.csv   0%[                    ]       0  --.-KB/s               \rmovie_overviews.csv 100%[===================>]   3.23M  18.0MB/s    in 0.2s    \n",
             "\n",
-            "2020-06-30 19:15:19 (17.1 MB/s) - ‘movie_overviews.csv.3’ saved [3384348/3384348]\n",
+            "2020-07-15 16:56:46 (18.0 MB/s) - ‘movie_overviews.csv’ saved [3384348/3384348]\n",
             "\n"
           ],
           "name": "stdout"
@@ -233,7 +233,7 @@
         "    inds = np.flip(similarity_matrix[title_index].argsort()[-n_recoms:-1])\n",
         "    return list(indices.iloc[inds].index)"
       ],
-      "execution_count": 41,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -255,7 +255,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "2e9d2074-6f4a-44f7-accd-29a326140bed"
+        "outputId": "b0998f7c-b6a3-4f45-9c78-2475e65ee560"
       },
       "source": [
         "df = pd.read_csv('movie_overviews.csv')\n",
@@ -388,7 +388,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "4f276951-c9bf-4057-afb6-39eda36707ca"
+        "outputId": "b3273200-1868-4e56-ac73-b2e12440c758"
       },
       "source": [
         "print('The number of data points: ', len(df))"
@@ -413,7 +413,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "ea53f212-6366-475d-b880-fa5cb75a0e98"
+        "outputId": "655ccba3-a5cb-4992-ac47-a35a1d95af7d"
       },
       "source": [
         "df.dtypes"
@@ -447,7 +447,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "981e990d-b3ec-4463-f748-c4ebd525f1ed"
+        "outputId": "f434764d-98ad-429b-a5de-1c75f1629eac"
       },
       "source": [
         "# Check for any missing values\n",
@@ -492,7 +492,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "3b002d49-20b4-4161-c04b-c2808c304a3c"
+        "outputId": "07832244-de80-4bac-c2cd-d9088d5bdea0"
       },
       "source": [
         "# Drop data points with missing values in column overview\n",
@@ -538,7 +538,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "45ce7686-4777-405c-868e-9ed85c29fe8a"
+        "outputId": "7973a08e-1e08-4806-d232-fb9a8484ed4d"
       },
       "source": [
         "df['chars_length'] = df['overview'].str.len()\n",
@@ -574,7 +574,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 445
         },
-        "outputId": "7cc5779b-19f0-4907-897e-76a1578cb125"
+        "outputId": "10de6ee1-a102-41bc-91ce-dcece35e6f93"
       },
       "source": [
         "# Plot it with histogram\n",
@@ -629,7 +629,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "a398f067-6311-4a35-fc36-e7a13ff982f8"
+        "outputId": "0dc93e86-8fc3-4676-be30-eff22c77adb6"
       },
       "source": [
         "df['words_length'] = df['overview'].apply(lambda x: len(word_tokenize(x)))\n",
@@ -665,7 +665,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 445
         },
-        "outputId": "b5195d25-6f0f-40e6-9b39-9c077398880b"
+        "outputId": "e02297d3-66a5-46fb-89d4-9f8527c2da72"
       },
       "source": [
         "# Plot it with histogram\n",
@@ -710,7 +710,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "62a1f205-e324-4567-f257-e1470640e1e6"
+        "outputId": "4f0a7fba-9b45-420e-e9e8-7cedce696b8f"
       },
       "source": [
         "df['sentences_length'] = df['overview'].apply(lambda x: len(sent_tokenize(x)))\n",
@@ -746,7 +746,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 449
         },
-        "outputId": "198d76f4-b055-4c14-fbae-146b2bf66b15"
+        "outputId": "2aa045a9-4a00-4ad2-aeb4-6ba3a1ab7d0e"
       },
       "source": [
         "# Plot it with histogram\n",
@@ -795,7 +795,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 80
         },
-        "outputId": "d2edd1a1-736d-433b-e782-0b6d3ffe178b"
+        "outputId": "0ab401dd-fefe-4676-ff38-e1b5e316891b"
       },
       "source": [
         "df[df['sentences_length'] == 0]"
@@ -871,7 +871,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 80
         },
-        "outputId": "2ad47f58-bdd7-4759-b9d0-cbebb0d43b92"
+        "outputId": "9633f37f-53e5-4eaa-96dd-3383b03f2473"
       },
       "source": [
         "df[df['words_length'] == 0]"
@@ -947,7 +947,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 80
         },
-        "outputId": "1197762a-6a41-4363-b3c2-d95b5238a157"
+        "outputId": "50ba318e-b040-4b1c-dae6-11f5f9ca8332"
       },
       "source": [
         "df[df['chars_length'] == 1]"
@@ -1046,7 +1046,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "f19efcf5-5ddc-45bf-c988-a894d9d95fbe"
+        "outputId": "47a5260b-a1ad-4dc8-e19c-33e4c17f8c65"
       },
       "source": [
         "print('Current number of data points: ', len(df))"
@@ -1115,7 +1115,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "9c248a50-4aba-4a8d-e898-9eb73fe2ab09"
+        "outputId": "877d7319-c098-4b34-909a-92f9e326b817"
       },
       "source": [
         "count_vectorizer = CountVectorizer(stop_words='english')\n",
@@ -1181,7 +1181,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 187
         },
-        "outputId": "d7e25842-ad18-4569-e054-cc688eefae83"
+        "outputId": "663bc8e8-c53e-4477-b5e2-0125270067ae"
       },
       "source": [
         "# Get the 10 most similar vectors\n",
@@ -1190,7 +1190,7 @@
         "inds = np.flip(inds)\n",
         "list(df.iloc[inds]['title'].values)"
       ],
-      "execution_count": 52,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1211,7 +1211,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 52
+          "execution_count": 24
         }
       ]
     },
@@ -1235,7 +1235,7 @@
       "source": [
         "indices = pd.Series(np.arange(0, df.shape[0]), index=df['title'])"
       ],
-      "execution_count": 53,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -1247,12 +1247,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 170
         },
-        "outputId": "2cceb9da-4018-4792-9cb3-390fecdecf71"
+        "outputId": "3e8942ea-7675-4527-f969-2c0e2f913d0f"
       },
       "source": [
         "get_recommendations('Batman', similarity_tfidf, indices)"
       ],
-      "execution_count": 54,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1272,7 +1272,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 54
+          "execution_count": 26
         }
       ]
     },
@@ -1285,6 +1285,29 @@
       "source": [
         "This is the recommendations we get if we want movies just like Batman."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TBI8UzMUZ5Ja",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Movie Recommendation Using Movie's Plot"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DIgG9tb_Z8b6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 26,
+      "outputs": []
     }
   ]
 }
